<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="ANETHUM_GRAVEOLENS">ANETHUM_GRAVEOLENS</string>
    <string name="ARTEMISIA_DRACUNCULUS">ARTEMISIA_DRACUNCULUS</string>
    <string name="BETA_VULGARIS_CICLA">BETA_VULGARIS_CICLA</string>
    <string name="BRASSICA_NAPUS_ANNUA">BRASSICA_NAPUS_ANNUA</string>
    <string name="BRASSICA_NAPUS_NAPUS">BRASSICA_NAPUS_NAPUS</string>
    <string name="BRASSICA_NAPUS_RAPIFERA">BRASSICA_NAPUS_RAPIFERA</string>
    <string name="BRASSICA_OLERACEA_BOTRYTIS">BRASSICA_OLERACEA_BOTRYTIS</string>
    <string name="BRASSICA_OLERACEA_CAPITATA">BRASSICA_OLERACEA_CAPITATA</string>
    <string name="BRASSICA_OLERACEA_ITALICA">BRASSICA_OLERACEA_ITALICA</string>
    <string name="BRASSICA_RAPA_RAPA">BRASSICA_RAPA_RAPA</string>
    <string name="CAPSICUM">CAPSICUM</string>
    <string name="CHAMAEMELUM">CHAMAEMELUM</string>
    <string name="CORIANDRUM_SATIVUM">CORIANDRUM_SATIVUM</string>
    <string name="CUCUMIS_SATIVUS_GHERKIN">CUCUMIS_SATIVUS_GHERKIN</string>
    <string name="CUCURBITA_MAXIMA_POTIMARRON">CUCURBITA_MAXIMA_POTIMARRON</string>
    <string name="CUCURBITA_PEPO_PEPO">CUCURBITA_PEPO_PEPO</string>
    <string name="CUCURBITA_MOSCHATA">CUCURBITA_MOSCHATA</string>
    <string name="CUCURBITA_MOSCHATA_BUTTERNUT">CUCURBITA_MOSCHATA_BUTTERNUT</string>
    <string name="CICHORIUM">CICHORIUM</string>
    <string name="DACTYLIS">DACTYLIS</string>
    <string name="ERUCA_VESICARIA">ERUCA_VESICARIA</string>
    <string name="FAGOPYRUM_ESCULENTUM">FAGOPYRUM_ESCULENTUM</string>
    <string name="FOENICULUM">FOENICULUM</string>
    <string name="FRAGARIA">FRAGARIA</string>
    <string name="HELIANTHUS_TUBEROSUS">HELIANTHUS_TUBEROSUS</string>
    <string name="HORDEUM_DISTICHUM">HORDEUM_DISTICHUM</string>
    <string name="HORDEUM_HEXASTICHUM">HORDEUM_HEXASTICHUM</string>
    <string name="HUMULUS_LUPULUS">HUMULUS_LUPULUS</string>
    <string name="LUPINUS">LUPINUS</string>
    <string name="MELILOTUS">MELILOTUS</string>
    <string name="NICOTIANA_TABACUM">NICOTIANA_TABACUM</string>
    <string name="OCIMUM_BASILICUM">OCIMUM_BASILICUM</string>
    <string name="PASTINACA_SATIVA">PASTINACA_SATIVA</string>
    <string name="PIMPINELLA_ANISUM">PIMPINELLA_ANISUM</string>
    <string name="PLANT">PLANT</string>
    <string name="POACEAE">POACEAE</string>
    <string name="SECALE_CEREALE">SECALE_CEREALE</string>
    <string name="SORGHUM">SORGHUM</string>
    <string name="TRAGOPOGON">TRAGOPOGON</string>
    <string name="TRIFOLIUM">TRIFOLIUM</string>
    <string name="TRITICUM_SPELTA">TRITICUM_SPELTA</string>
    <string name="ZEA_MAYS_SACCHARATA">ZEA_MAYS_SACCHARATA</string>
    <string name="PRUNUS_ARMENIACA">Prunus armeniaca</string>
    <string name="ALLIUM_SATIVUM">Allium sativum</string>
    <string name="CYNARA_SCOLYMUS">Cynara scolymus</string>
    <string name="SOLANUM_MELONGENA">Solanum melongena</string>
    <string name="SOLANUM_TORVUM">Solanum torvum</string>
    <string name="AVENA_SATIVA">Avena sativa</string>
    <string name="BETA_VULGARIS">Beta vulgaris</string>
    <string name="TRITICUM_DURUM">Triticum durum</string>
    <string name="TRITICUM_AESTIVUM">Triticum aestivum</string>
    <string name="BRASSICA_RAPA">Brassica rapa</string>
    <string name="DAUCUS_CAROTA">Daucus carota</string>
    <string name="RIBES_NIGRUM">Ribes nigrum</string>
    <string name="CITRUS_MEDICA">Citrus medica</string>
    <string name="APIUM_GRAVEOLENS">Apium graveolens</string>
    <string name="VITIS_VINIFERA">Vitis vinifera</string>
    <string name="ANTHRISCUS_CEREFOLIUM">Anthriscus cerefolium</string>
    <string name="CANNABIS_SATIVA">Cannabis sativa</string>
    <string name="CICHORIUM_ENDIVIA">Cichorium endivia</string>
    <string name="CICHORIUM_INTYBUS">Cichorium intybus</string>
    <string name="BRASSICA_OLERACEA">Brassica oleracea</string>
    <string name="ALLIUM_SCHOENOPRASUM">Allium schoenoprasum</string>
    <string name="CUCURBITA_PEPO">Cucurbita pepo</string>
    <string name="CYDONIA_OBLONGA">Cydonia oblonga</string>
    <string name="BRASSICA_NAPUS">Brassica napus</string>
    <string name="CUCUMIS_SATIVUS">Cucumis sativus</string>
    <string name="ALLIUM_ASCALONICUM">Allium ascalonicum</string>
    <string name="SPINACIA_OLERACEA">Spinacia oleracea</string>
    <string name="FOENICULUM_VULGARE">Foeniculum vulgare</string>
    <string name="VICIA_FABA">Vicia faba</string>
    <string name="RUBUS_IDAEUS">Rubus idaeus</string>
    <string name="RIBES_RUBRUM">Ribes rubrum</string>
    <string name="PHASEOLUS_VULGARIS">Phaseolus vulgaris</string>
    <string name="FORTUNELLA_MARGARITA">Fortunella margarita</string>
    <string name="LACTUCA_SATIVA">Lactuca sativa</string>
    <string name="LENS_CULINARIS">Lens culinaris</string>
    <string name="LINUM_USITATISSIMUM">Linum usitatissimum</string>
    <string name="LOTUS_CORNICULATUS">Lotus corniculatus</string>
    <string name="MEDICAGO_SATIVA">Medicago sativa</string>
    <string name="VALERIANELLA_LOCUSTA">Valerianella locusta</string>
    <string name="ZEA_MAYS">Zea mays</string>
    <string name="CITRUS_RETICULATA">Citrus reticulata</string>
    <string name="CUCUMIS_MELO">Cucumis melo</string>
    <string name="PRUNUS_AVIUM">Prunus avium</string>
    <string name="PRUNUS_MAHALEB">Prunus mahaleb</string>
    <string name="CORYLUS_AVELLANA">Corylus avellana</string>
    <string name="JUGLANS_REGIA">Juglans regia</string>
    <string name="ALLIUM_CEPA">Allium cepa</string>
    <string name="OLEA_EUROPAEA">Olea europaea</string>
    <string name="CITRUS_SINENSIS">Citrus sinensis</string>
    <string name="HORDEUM_VULGARE">Hordeum vulgare</string>
    <string name="CITRULLUS_LANATUS">Citrullus lanatus</string>
    <string name="POA_TRIVIALIS">Poa trivialis</string>
    <string name="PRUNUS_PERSICA">Prunus persica</string>
    <string name="PETROSELINUM_CRISPUM">Petroselinum crispum</string>
    <string name="ALLIUM_PORRUM">Allium porrum</string>
    <string name="PYRUS_COMMUNIS">Pyrus communis</string>
    <string name="CICER_ARIETINUM">Cicer arietinum</string>
    <string name="PISUM_SATIVUM">Pisum sativum</string>
    <string name="CAPSICUM_ANNUUM">Capsicum annuum</string>
    <string name="SOLANUM_TUBEROSUM">Solanum tuberosum</string>
    <string name="MALUS_PUMILA">Malus pumila</string>
    <string name="CUCURBITA_MAXIMA">Cucurbita maxima</string>
    <string name="PRUNUS_CERASIFERA">Prunus cerasifera</string>
    <string name="PRUNUS_DOMESTICA">Prunus domestica</string>
    <string name="PRUNUS_SALICINA">Prunus salicina</string>
    <string name="PRUNUS_CERASUS">Prunus cerasus</string>
    <string name="RAPHANUS_SATIVUS">Raphanus sativus</string>
    <string name="LOLIUM_PERENNE">Lolium perenne</string>
    <string name="LOLIUM_MULTIFLORUM">Lolium multiflorum</string>
    <string name="ORYZA_SATIVA">Oryza sativa</string>
    <string name="ONOBRYCHIS_VICIIFOLIA">Onobrychis viciifolia</string>
    <string name="GLYCINE_MAX">Glycine max</string>
    <string name="SOLANUM_LYCOPERSICUM">Solanum lycopersicum</string>
    <string name="HELIANTHUS_ANNUUS">Helianthus annuus</string>
    <string name="TRIFOLIUM_REPENS">Trifolium repens</string>
    <string name="TRIFOLIUM_ALEXANDRINUM">Trifolium alexandrinum</string>
    <string name="TRIFOLIUM_INCARNATUM">Trifolium incarnatum</string>
    <string name="TRIFOLIUM_PRATENSE">Trifolium pratense</string>
    <string name="TRITICOSECALE">Triticale</string>
    <string name="VICIA_SATIVA">Vicia sativa</string>
    <string name="VICIA_VILLOSA">Vicia villosa</string>
    <string name="VITIS">Vine</string>
    <string name="IRRIGATION">Irrigation</string>
    <string name="GROUND_WORK">Ground work</string>
    <string name="IMPLANTATION">Implantation</string>
    <string name="FERTILIZATION">Fertilization</string>
    <string name="HARVEST">Harvest</string>
    <string name="CARE">Care</string>
    <string name="CROP_PROTECTION">Crop protection</string>
    <string name="TRACTOR">Tractor</string>
    <string name="HARROW">Harrow</string>
    <string name="SEEDBED_PREPARATOR">Seedbed preparator</string>
    <string name="GRINDER">Grinder</string>
    <string name="HILLER">Hiller</string>
    <string name="HOE">Hoe</string>
    <string name="PLOW">Plow</string>
    <string name="ROLL">Roll</string>
    <string name="SOIL_LOOSENER">Soil loosener</string>
    <string name="SUPERFICIAL_PLOW">Superficial plow</string>
    <string name="SUBSOIL_PLOW">Subsoil plow</string>
    <string name="VIBROCULTIVATOR">Vibrocultivator</string>
    <string name="DISC_HARROW">Disc harrow</string>
    <string name="SOWER">Sower</string>
    <string name="IMPLANTER">Implanter</string>
    <string name="AIRPLANTER">Airplanter</string>
    <string name="SPREADER">Spreader</string>
    <string name="LIQUID_MANURE_SPREADER">Liquid manure spreader</string>
    <string name="SPREADER_TRAILER">Spreader trailer</string>
    <string name="HOE_WEEDER">Hoe weeder</string>
    <string name="ROTARY_HOE">Rotary hoe</string>
    <string name="WEEDER">Weeder</string>
    <string name="SPRAYER">Sprayer</string>
    <string name="ROUND_BALER">Round baler</string>
    <string name="CUBIC_BALER">Cubic baler</string>
    <string name="BALER_WRAPPER">Baler wrapper</string>
    <string name="TRAILER">Trailer</string>
    <string name="CORN_TOPPER">Corn topper</string>
    <string name="FORAGER">Forager</string>
    <string name="HARVESTER">Harvester</string>
    <string name="HAY_RAKE">Hay rake</string>
    <string name="MOWER">Mower</string>
    <string name="REAPER">Reaper</string>
    <string name="TOPPER">Topper</string>
    <string name="TRIMMER">Trimmer</string>
    <string name="MOWER_CONDITIONER">Mower conditioner</string>
    <string name="TEDDER">Tedder</string>
    <string name="WRAPPER">Wrapper</string>
    <string name="FORAGE_PLATFORM">Forage platform</string>
    <string name="WATER_SPREADER">Water spreader</string>
    <string name="IRRIGATION_PIVOT">Irrigation pivot</string>
    <string name="crop">%d crop</string>
    <string name="crops">%d crops</string>
    <string name="input">%d input</string>
    <string name="inputs">%d inputs</string>
    <string name="material">%d material</string>
    <string name="materials">%d materials</string>
    <string name="equipment">%d equipment</string>
    <string name="equipments">%d equipments</string>
    <string name="person">%d person</string>
    <string name="persons">%d persons</string>
    <string name="load">%d load</string>
    <string name="loads">%d loads</string>
    <string name="day">%d day</string>
    <string name="days">%d days</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="x_hour">%d hour</string>
    <string name="x_hours">%d hours</string>
    <string name="validate">Validate</string>
    <string name="none">none</string>
    <string name="label_inputs">Inputs</string>
    <string name="quantity">Quantity</string>
    <string name="default_quantity_value">0</string>
    <string name="create_seed_title">Create new seed</string>
    <string name="create_equipment_title">Create new tool</string>
    <string name="create_person_title">Create new person</string>
    <string name="selecting_crops">Select a crop</string>
    <string name="add">+ Add</string>
    <string name="no_crop_selected">No crop selected</string>
    <string name="chose_specie">Specie</string>
    <string name="chose_nature">Nature</string>
    <string name="chose_type">Type</string>
    <string name="stock_place">Storage</string>
    <string name="number">Number</string>
    <string name="name">Name</string>
    <string name="title">Title</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="non_authorized_mix">mélange non autorisé</string>
    <string name="create_storage_title">Création d\'un lieu de stockage</string>
    <string name="variety">Variété</string>
</resources>