<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/create_seed_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_seed_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#000000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chose_specie"
        android:layout_marginTop="16dp"/>  <!-- style="@style/InputLabel" -->

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/create_seed_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/chose_specie" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/create_seed_variety"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:hint="@string/variety"/>
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>