<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ekylibre.android.fragments.SelectMaterialFragment"
    android:background="@color/background"
    style="@style/NoActionBar">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/app_bar">
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/selecting_crops"
            app:titleTextAppearance="@style/Base.TextAppearance.AppCompat.Title"
            app:titleTextColor="@color/dialogTitleColor"
            android:background="@color/dialogColor"/>
    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/crop_dialog_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/item_plot"
        android:scrollbars="vertical"
        android:background="@drawable/border_top"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintBottom_toTopOf="@id/nav_layout"/>


    <!-- The bottom validation buttons -->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/nav_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@color/dialogColor"
        app:layout_constraintBottom_toBottomOf="parent">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/crop_dialog_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_crop_selected"
            app:layout_constraintBaseline_toBaselineOf="@id/button_validate"
            app:layout_constraintStart_toStartOf="@id/nav_layout"
            android:layout_marginStart="16dp"
            android:textColor="@color/dialogTitleColor"
            android:textStyle="bold"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_validate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/validate"
            android:background="@drawable/background_round_corners"
            app:layout_constraintTop_toTopOf="@id/nav_layout"
            app:layout_constraintEnd_toEndOf="@id/nav_layout"
            app:layout_constraintBottom_toBottomOf="@id/nav_layout"
            android:minHeight="0dp"
            android:padding="6dp"
            android:layout_margin="6dp"/>

    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>
