<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@null"
    android:padding="8dp">

    <android.support.constraint.Barrier
        android:id="@+id/harvest_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="harvest_quantity_label,stock_place_label,harvest_number_label" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/harvest_quantity_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/harvest_quantity_edit" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/harvest_quantity_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/field_part_one"
        android:ems="4"
        android:gravity="end"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:paddingBottom="4dp"
        android:paddingEnd="@dimen/regular_margin"
        android:paddingStart="@dimen/regular_margin"
        android:paddingTop="4dp"
        android:text="@string/default_quantity_value"
        app:layout_constraintStart_toEndOf="@id/harvest_barrier"
        app:layout_constraintTop_toBottomOf="parent"
        android:selectAllOnFocus="true" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/harvest_unit_spinner"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/field_part_two"
        android:gravity="start"
        app:layout_constraintStart_toEndOf="@id/harvest_quantity_edit"
        app:layout_constraintTop_toTopOf="@id/harvest_quantity_edit"
        app:layout_constraintBottom_toBottomOf="@id/harvest_quantity_edit"
        android:entries="@array/mass_unit_values" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/stock_place_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stock_place"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/stock_place_spinner" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/stock_place_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/field_rounded_white"
        android:gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingStart="@dimen/regular_margin"
        android:paddingEnd="@dimen/regular_margin"
        app:layout_constraintStart_toEndOf="@id/harvest_barrier"
        app:layout_constraintTop_toBottomOf="@id/harvest_quantity_edit"
        app:layout_constraintEnd_toEndOf="@id/harvest_unit_spinner"
        android:entries="@array/species_values" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/harvest_number_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/harvest_number_edit" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/harvest_number_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/field_rounded_white"
        android:gravity="end"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:paddingBottom="4dp"
        android:paddingEnd="@dimen/regular_margin"
        android:paddingStart="@dimen/regular_margin"
        android:paddingTop="4dp"
        android:hint="Fourni par le collecteur"
        android:textSize="16dp"
        app:layout_constraintStart_toEndOf="@id/harvest_barrier"
        app:layout_constraintEnd_toEndOf="@id/stock_place_spinner"
        app:layout_constraintTop_toBottomOf="@id/stock_place_spinner"
        android:selectAllOnFocus="true" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/harvest_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="@color/accent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_clear" />

</android.support.constraint.ConstraintLayout>