<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:background="@drawable/border_bottom">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/input_zone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/input_arrow"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingStart="@dimen/start_end_include_margin"
            android:paddingEnd="@dimen/start_end_include_margin"
            app:srcCompat="@drawable/icon_arrow_down"
            android:animateLayoutChanges="true"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/input_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/category_header_size"
            android:textColor="@color/primary_dark"
            android:text="@string/label_inputs"
            android:paddingTop="@dimen/top_bottom_include_margin"
            android:paddingBottom="@dimen/top_bottom_include_margin"
            android:paddingStart="@dimen/start_end_include_margin"
            android:paddingEnd="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/input_add_label"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:text="@string/add"
            android:textAllCaps="true"
            android:textColor="@color/action_text"
            android:gravity="center_vertical"
            app:layout_constraintStart_toEndOf="@+id/input_label"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/input_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/none"
            app:layout_constraintBaseline_toBaselineOf="@id/input_label"
            app:layout_constraintStart_toEndOf="@+id/input_label"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/input_recycler_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="input_recycler,input_recycler_bottom_margin"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/input_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_end_include_margin"
        android:layout_marginEnd="@dimen/start_end_include_margin"
        android:layout_marginBottom="@dimen/start_end_include_margin"
        app:layout_constraintTop_toBottomOf="@id/input_zone"
        android:background="@drawable/border_input_list" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/phyto_mix_warning_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="phyto_mix_allowed,phyto_mix_message"
        android:visibility="gone" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/phyto_mix_allowed"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="@id/input_recycler"
        app:layout_constraintTop_toBottomOf="@id/input_recycler"
        app:srcCompat="@drawable/icon_dot"
        android:tint="@color/error" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/phyto_mix_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/phyto_mix_allowed"
        app:layout_constraintTop_toTopOf="@id/phyto_mix_allowed"
        android:layout_marginStart="0dp"
        android:text="@string/non_authorized_mix"
        android:textColor="@color/error" />

    <View
        android:id="@+id/input_recycler_bottom_margin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bottom_include_margin"
        app:layout_constraintTop_toBottomOf="@id/phyto_mix_allowed"/>



</androidx.constraintlayout.widget.ConstraintLayout>